--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,9 @@
 	<title>Test Page</title>
 </head>
 <body>
+	<header>
+		<img src="/img/logo.png" alt="Logo">
+	</header>
 	{{{body}}}
 </body>
 </html>
