--- a/views/contact-finish.handlebars
+++ b/views/contact-finish.handlebars
@@ -1,2 +1,7 @@
 <h1>Contact</h1>
+{{#if flash}}
+	<div class="alert alert-dismissible alert-{{flash.type}}">
+		<strong>{{flash.intro}}</strong><br>{{{flash.message}}}
+	</div>
+{{/if}}
 <p>Thank you for submitting the form.</p>
