--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,7 +1,16 @@
 <h1>Contact</h2>
 <p>Contact us by submitting this form.</p>
-<form action="" method="post">
+<form class="form-horizontal" action="" method="post">
 <input type="hidden" name="_csrf" value="{{csrf}}">
-<input type="text" name="formfield" value="">
-<input type="submit" value="Absenden">
+<div class="form-group">
+	<label for="formfield" class="col-sm-3 control-label">Field</label>
+	<div class="col-sm-9">
+		<input type="text" name="formfield" id="formfield" class="form-control" value="">
+	</div>
+</div>
+<div class="form-group">
+	<div class="col-sm-9 col-sm-offset-3">
+		<button type="submit" class="btn btn-default">Absenden</button>
+	</div>
+</div>
 </form>
