--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,18 +1,36 @@
 <!doctype html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Test Page</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	{{{_sections.head}}}
 </head>
 <body>
-	<header>
+
+	{{> nav}}
+
+	<div class="container" style="padding-top:50px">
+
 		<img src="/img/logo.png" alt="Logo">
-	</header>
-	{{{body}}}
-	{{> status}}
-	<footer>
-		&copy; 2015 Urs Gürtler
-	</footer>
+
+		<div class="row">
+			<div class="col-md-8 col-sm-12">
+				{{{body}}}
+			</div>
+			<div class="col-md-4 col-sm-12">
+				{{> status}}
+			</div>
+		</div>
+
+		<p>&copy; 2015 Urs Gürtler</p>
+
+	</div><!-- /.container -->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	{{{_sections.footer}}}
 </body>
 </html>
