--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -14,6 +14,7 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="/contact">Contact</a></li>
 				<li><a href="/testimonials">Testimonials</a></li>
+				<li><a href="/about-us">About us</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
